# Bracketlapse

./: .gitignore  README.md  README.zh-CN.md  make_video_from_jpgs.bat  pyproject.toml
src/bracketlapse/: __init__.py  arguments.py  cli.py  common.py  deflicker.py  enfuse.py  environment.py  fusion.py  grouping.py  images.py  installers.py  standby.py  video.py
tests/: helpers.py  test_cli_pipeline.py
