[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bracketlapse"
version = "0.1.0"
description = "Fuse bracketed JPG timelapse frames and build videos with ffmpeg."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Bracketlapse contributors" }
]
license = "GPL-3.0-or-later"
dependencies = []

[project.scripts]
bracketlapse = "bracketlapse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
